--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URL=mongodb+srv://heanqi0925:MSGlMcG2q80Qc7au@cloth.xfv3miu.mongodb.net/cloth
 PORT = 3000
+SECRET = cloth2024
+JWT_SECRET = cloth2024
